// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactForm should fill form with contact data 1`] = `
<div>
  <form
    className="u-flex u-flex-column u-flex-items-stretch u-flex-justify-start"
    onSubmit={[Function]}
  >
    <h3
      className="u-title-h2 u-mt-1-half u-mb-1"
    >
      Contact informations
    </h3>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_10"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#people"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Firstname
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_10"
              name="givenName"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="text"
              value="John"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half u-pl-0-s u-pl-2"
        htmlFor="field_11"
      >
        <span
          className="u-w-4"
        >
          Lastname
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_11"
              name="familyName"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={true}
              type="text"
              value="Doe"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_12"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Phone
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_12"
                name="phone[0].phone"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="tel"
                value="+33 (2)0 90 00 54 04"
              />
            </div>
            <div
              className="contact-form__input-container u-mt-half-s u-pl-half u-pl-0-s"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                name="phone[0].phoneLabel"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Label"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            className="styles__c-btn___-2Vnj styles__c-btn--secondary___3Br_N styles__c-btn--round___1Lkyl contact-form__meta-button u-m-0"
            onClick={[Function]}
            title="delete"
            type="button"
          >
            <span>
              <svg
                aria-hidden={true}
                className="styles__icon___23x3R"
                focusable="false"
                height="16"
                style={Object {}}
                width="16"
              >
                <use
                  xlinkHref="#cross-small"
                />
              </svg>
              <span
                className="u-visuallyhidden"
              >
                delete
              </span>
            </span>
          </button>
        </div>
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_12"
                name="phone[1].phone"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="tel"
                value="+33 6 77 11 22 33"
              />
            </div>
            <div
              className="contact-form__input-container u-mt-half-s u-pl-half u-pl-0-s"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                name="phone[1].phoneLabel"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Label"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            className="styles__c-btn___-2Vnj styles__c-btn--secondary___3Br_N styles__c-btn--round___1Lkyl contact-form__meta-button u-m-0"
            onClick={[Function]}
            title="delete"
            type="button"
          >
            <span>
              <svg
                aria-hidden={true}
                className="styles__icon___23x3R"
                focusable="false"
                height="16"
                style={Object {}}
                width="16"
              >
                <use
                  xlinkHref="#cross-small"
                />
              </svg>
              <span
                className="u-visuallyhidden"
              >
                delete
              </span>
            </span>
          </button>
        </div>
        <button
          className="styles__c-btn___-2Vnj styles__c-btn--text___2Vp-2 u-ph-0 u-mh-0"
          onClick={[Function]}
          title={null}
          type="button"
        >
          <span>
            <svg
              aria-hidden={true}
              className="styles__icon___23x3R"
              focusable="false"
              height="16"
              style={Object {}}
              width="16"
            >
              <use
                xlinkHref="#plus"
              />
            </svg>
            <span
              className={null}
            >
              Add a phone
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_13"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Email
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_13"
                name="email[0].email"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="email"
                value="john.doe@cozycloud.cc"
              />
            </div>
            <div
              className="contact-form__input-container u-mt-half-s u-pl-half u-pl-0-s"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                name="email[0].emailLabel"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Label"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            className="styles__c-btn___-2Vnj styles__c-btn--secondary___3Br_N styles__c-btn--round___1Lkyl contact-form__meta-button u-m-0"
            onClick={[Function]}
            title="delete"
            type="button"
          >
            <span>
              <svg
                aria-hidden={true}
                className="styles__icon___23x3R"
                focusable="false"
                height="16"
                style={Object {}}
                width="16"
              >
                <use
                  xlinkHref="#cross-small"
                />
              </svg>
              <span
                className="u-visuallyhidden"
              >
                delete
              </span>
            </span>
          </button>
        </div>
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_13"
                name="email[1].email"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="email"
                value="john.doe@posteo.net"
              />
            </div>
            <div
              className="contact-form__input-container u-mt-half-s u-pl-half u-pl-0-s"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                name="email[1].emailLabel"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Label"
                type="text"
                value="personal"
              />
            </div>
          </div>
          <button
            className="styles__c-btn___-2Vnj styles__c-btn--secondary___3Br_N styles__c-btn--round___1Lkyl contact-form__meta-button u-m-0"
            onClick={[Function]}
            title="delete"
            type="button"
          >
            <span>
              <svg
                aria-hidden={true}
                className="styles__icon___23x3R"
                focusable="false"
                height="16"
                style={Object {}}
                width="16"
              >
                <use
                  xlinkHref="#cross-small"
                />
              </svg>
              <span
                className="u-visuallyhidden"
              >
                delete
              </span>
            </span>
          </button>
        </div>
        <button
          className="styles__c-btn___-2Vnj styles__c-btn--text___2Vp-2 u-ph-0 u-mh-0"
          onClick={[Function]}
          title={null}
          type="button"
        >
          <span>
            <svg
              aria-hidden={true}
              className="styles__icon___23x3R"
              focusable="false"
              height="16"
              style={Object {}}
              width="16"
            >
              <use
                xlinkHref="#plus"
              />
            </svg>
            <span
              className={null}
            >
              Add an email
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_14"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Address
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_14"
                name="address[0].address"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="text"
                value="94 Hinton Road 05034 Fresno, Singapore"
              />
            </div>
            <div
              className="contact-form__input-container u-mt-half-s u-pl-half u-pl-0-s"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                name="address[0].addressLabel"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Label"
                type="text"
                value="Home"
              />
            </div>
          </div>
          <button
            className="styles__c-btn___-2Vnj styles__c-btn--secondary___3Br_N styles__c-btn--round___1Lkyl contact-form__meta-button u-m-0"
            onClick={[Function]}
            title="delete"
            type="button"
          >
            <span>
              <svg
                aria-hidden={true}
                className="styles__icon___23x3R"
                focusable="false"
                height="16"
                style={Object {}}
                width="16"
              >
                <use
                  xlinkHref="#cross-small"
                />
              </svg>
              <span
                className="u-visuallyhidden"
              >
                delete
              </span>
            </span>
          </button>
        </div>
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_14"
                name="address[1].address"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="text"
                value="426 Runolfsson Knolls 84573 Port Easter  Cocos (Keeling) Islands"
              />
            </div>
            <div
              className="contact-form__input-container u-mt-half-s u-pl-half u-pl-0-s"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                name="address[1].addressLabel"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Label"
                type="text"
                value="Work"
              />
            </div>
          </div>
          <button
            className="styles__c-btn___-2Vnj styles__c-btn--secondary___3Br_N styles__c-btn--round___1Lkyl contact-form__meta-button u-m-0"
            onClick={[Function]}
            title="delete"
            type="button"
          >
            <span>
              <svg
                aria-hidden={true}
                className="styles__icon___23x3R"
                focusable="false"
                height="16"
                style={Object {}}
                width="16"
              >
                <use
                  xlinkHref="#cross-small"
                />
              </svg>
              <span
                className="u-visuallyhidden"
              >
                delete
              </span>
            </span>
          </button>
        </div>
        <button
          className="styles__c-btn___-2Vnj styles__c-btn--text___2Vp-2 u-ph-0 u-mh-0"
          onClick={[Function]}
          title={null}
          type="button"
        >
          <span>
            <svg
              aria-hidden={true}
              className="styles__icon___23x3R"
              focusable="false"
              height="16"
              style={Object {}}
              width="16"
            >
              <use
                xlinkHref="#plus"
              />
            </svg>
            <span
              className={null}
            >
              Add an address
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_15"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Cozy URL
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_15"
              name="cozy"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="url"
              value="https://johndoe.mycozy.cloud"
            />
          </div>
          <div
            className="contact-form__input-container u-mt-half-s u-pl-half u-pl-0-s"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              name="cozyLabel"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Label"
              type="text"
              value="MyCozy"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_16"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Company
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_16"
              name="company"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="text"
              value="Cozy cloud"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_17"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Birthday
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_17"
              name="birthday"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="date"
              value="1999-5-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_18"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Notes
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <textarea
              className="styles__c-textarea___D7EEH styles__c-textarea--medium___T8f3b styles__c-textarea--fullwidth___Ih_mg contact-form__input"
              data-valid={true}
              id="field_18"
              name="note"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="textarea"
              value="Atque cupiditate saepe omnis quos ut molestiae labore voluptates omnis."
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`ContactForm should match snapshot 1`] = `
<div>
  <form
    className="u-flex u-flex-column u-flex-items-stretch u-flex-justify-start"
    onSubmit={[Function]}
  >
    <h3
      className="u-title-h2 u-mt-1-half u-mb-1"
    >
      Contact informations
    </h3>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_1"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#people"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Firstname
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_1"
              name="givenName"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half u-pl-0-s u-pl-2"
        htmlFor="field_2"
      >
        <span
          className="u-w-4"
        >
          Lastname
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_2"
              name="familyName"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={true}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_3"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Phone
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_3"
                name="phone[0].phone"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="tel"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          className="styles__c-btn___-2Vnj styles__c-btn--text___2Vp-2 u-ph-0 u-mh-0"
          onClick={[Function]}
          title={null}
          type="button"
        >
          <span>
            <svg
              aria-hidden={true}
              className="styles__icon___23x3R"
              focusable="false"
              height="16"
              style={Object {}}
              width="16"
            >
              <use
                xlinkHref="#plus"
              />
            </svg>
            <span
              className={null}
            >
              Add a phone
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_4"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Email
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_4"
                name="email[0].email"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="email"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          className="styles__c-btn___-2Vnj styles__c-btn--text___2Vp-2 u-ph-0 u-mh-0"
          onClick={[Function]}
          title={null}
          type="button"
        >
          <span>
            <svg
              aria-hidden={true}
              className="styles__icon___23x3R"
              focusable="false"
              height="16"
              style={Object {}}
              width="16"
            >
              <use
                xlinkHref="#plus"
              />
            </svg>
            <span
              className={null}
            >
              Add an email
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_5"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Address
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__inputs-line"
        >
          <div
            className="contact-form__input-wrapper"
          >
            <div
              className="contact-form__input-container"
            >
              <input
                className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
                data-valid={true}
                id="field_5"
                name="address[0].address"
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                required={false}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          className="styles__c-btn___-2Vnj styles__c-btn--text___2Vp-2 u-ph-0 u-mh-0"
          onClick={[Function]}
          title={null}
          type="button"
        >
          <span>
            <svg
              aria-hidden={true}
              className="styles__icon___23x3R"
              focusable="false"
              height="16"
              style={Object {}}
              width="16"
            >
              <use
                xlinkHref="#plus"
              />
            </svg>
            <span
              className={null}
            >
              Add an address
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_6"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Cozy URL
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_6"
              name="cozy"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="url"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_7"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Company
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_7"
              name="company"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_8"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Birthday
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <input
              className="styles__c-input-text___3TAv1 styles__c-input-text--medium___28jPV styles__c-input-text--fullwidth___33o_f contact-form__input"
              data-valid={true}
              id="field_8"
              name="birthday"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="date"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="contact-form-field"
    >
      <label
        className="styles__c-label___o4ozG contact-form__label u-inline-flex u-flex-items-center u-mr-half"
        htmlFor="field_9"
      >
        <svg
          className="u-mr-1 styles__icon___23x3R"
          height="16"
          style={
            Object {
              "fill": "var(--coolGrey)",
            }
          }
          width="16"
        >
          <use
            xlinkHref="#icon-0"
          />
        </svg>
        <span
          className="u-w-4"
        >
          Notes
        </span>
      </label>
      <div
        className="contact-form__inputs-wrapper"
      >
        <div
          className="contact-form__input-wrapper"
        >
          <div
            className="contact-form__input-container"
          >
            <textarea
              className="styles__c-textarea___D7EEH styles__c-textarea--medium___T8f3b styles__c-textarea--fullwidth___Ih_mg contact-form__input"
              data-valid={true}
              id="field_9"
              name="note"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder=""
              required={false}
              type="textarea"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`ContactForm should submit a well formatted contact 1`] = `
Object {
  "address": Array [
    Object {
      "formattedAddress": "18 rue des fleurs, Pecado",
      "primary": true,
      "type": undefined,
    },
  ],
  "birthday": "31/12/2015",
  "company": "Cozy CLoud",
  "cozy": Array [
    Object {
      "label": undefined,
      "primary": true,
      "url": "https://jcvd.cozy.cloud",
    },
  ],
  "email": Array [
    Object {
      "address": "jcvc@cozy.cloud",
      "primary": true,
      "type": undefined,
    },
  ],
  "fullname": "Jean-Claude Van Cozy",
  "metadata": Object {
    "cozy": true,
    "version": 1,
  },
  "name": Object {
    "familyName": "Van Cozy",
    "givenName": "Jean-Claude",
  },
  "note": "Whatever.",
  "phone": Array [
    Object {
      "number": "+33678987654",
      "primary": true,
      "type": undefined,
    },
  ],
  "relationships": Object {
    "groups": Object {
      "data": Array [],
    },
  },
}
`;

exports[`ContactForm should submit empty fields 1`] = `
Object {
  "address": Array [],
  "birthday": undefined,
  "company": "",
  "cozy": Array [],
  "email": Array [],
  "fullname": "",
  "metadata": Object {
    "cozy": true,
    "version": 1,
  },
  "name": Object {
    "familyName": undefined,
    "givenName": undefined,
  },
  "note": "",
  "phone": Array [],
  "relationships": Object {
    "groups": Object {
      "data": Array [],
    },
  },
}
`;
